removing the last cell that had error

--- a/movie_recommender.ipynb
+++ b/movie_recommender.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 68,
+   "execution_count": 84,
    "metadata": {
     "collapsed": true
    },
@@ -14,7 +14,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 69,
+   "execution_count": 85,
    "metadata": {},
    "outputs": [
     {
@@ -112,7 +112,7 @@
        "4   8.387519           5.7  "
       ]
      },
-     "execution_count": 69,
+     "execution_count": 85,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -123,13 +123,15 @@
     "meta= meta[[\"id\",\"imdb_id\",\"original_language\",\"original_title\",\"popularity\",\"vote_average\"]]\n",
     "meta= meta.rename(columns={'id':'movieId'})\n",
     "meta = meta[meta['original_language']== 'en'] #just want movies in English\n",
-    "meta.head()"
+    "meta.head(10)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 71,
-   "metadata": {},
+   "execution_count": 86,
+   "metadata": {
+    "collapsed": true
+   },
    "outputs": [],
    "source": [
     "#importing movie ratings\n",
@@ -140,7 +142,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 72,
+   "execution_count": 87,
    "metadata": {
     "collapsed": true
    },
@@ -153,7 +155,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 73,
+   "execution_count": 88,
    "metadata": {},
    "outputs": [
     {
@@ -263,7 +265,7 @@
        "4  10.234919           6.5  "
       ]
      },
-     "execution_count": 73,
+     "execution_count": 88,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -276,7 +278,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 74,
+   "execution_count": 89,
    "metadata": {},
    "outputs": [
     {
@@ -541,7 +543,7 @@
        "[5 rows x 3615 columns]"
       ]
      },
-     "execution_count": 74,
+     "execution_count": 89,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -554,7 +556,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 75,
+   "execution_count": 90,
    "metadata": {
     "collapsed": true
    },
@@ -569,8 +571,10 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 76,
-   "metadata": {},
+   "execution_count": 91,
+   "metadata": {
+    "collapsed": true
+   },
    "outputs": [],
    "source": [
     "# A function to make N recommendations based on Pearson Correlation.\n",
@@ -596,7 +600,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 82,
+   "execution_count": 94,
    "metadata": {},
    "outputs": [
     {
@@ -606,32 +610,20 @@
       "/anaconda3/lib/python3.6/site-packages/ipykernel_launcher.py:5: RuntimeWarning: invalid value encountered in double_scalars\n",
       "  \"\"\"\n"
      ]
-    }
-   ],
-   "source": [
-    "recs = recommend(\"Jumanji\", matrix, 10) #top 10 recommendations\n",
-    "if recs :\n",
-    "    print(recs)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 83,
-   "metadata": {},
-   "outputs": [
+    },
     {
-     "ename": "AttributeError",
-     "evalue": "'numpy.ndarray' object has no attribute 'head'",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
-      "\u001b[0;31mAttributeError\u001b[0m                            Traceback (most recent call last)",
-      "\u001b[0;32m<ipython-input-83-abf4c2913f28>\u001b[0m in \u001b[0;36m<module>\u001b[0;34m()\u001b[0m\n\u001b[0;32m----> 1\u001b[0;31m \u001b[0mdata\u001b[0m\u001b[0;34m[\u001b[0m\u001b[0;34m'original_title'\u001b[0m\u001b[0;34m]\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0munique\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mhead\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m",
-      "\u001b[0;31mAttributeError\u001b[0m: 'numpy.ndarray' object has no attribute 'head'"
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[('Flatliners', 0.35288013288909359), ('Twister', 0.29926460384018871), ('Collateral', 0.28849029376613156), ('The Lost Boys', 0.28110234802760325), ('Groundhog Day', 0.27063701862812212), ('One Million B.C.', 0.2673540077845088), ('Resident Evil: Apocalypse', 0.26292786267293006), ('Shrek', 0.25751137252138967), ('The Real McCoy', 0.25586572106396877), ('Moonstruck', 0.24934735150473572)]\n"
      ]
     }
    ],
-   "source": []
+   "source": [
+    "recs = recommend(\"A Few Good Men\", matrix, 10) #top 10 recommendations\n",
+    "if recs :\n",
+    "    print(recs)"
+   ]
   },
   {
    "cell_type": "code",
