Tuned a bit to get rid of low similarity users

--- a/movie_recommender.ipynb
+++ b/movie_recommender.ipynb
@@ -525,14 +525,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "[[30, 1.0], [87, 1.0], [103, 1.0], [302, 1.0], [343, 1.0], [354, 1.0], [419, 1.0], [829, 1.0], [851, 1.0], [1194, 1.0], [1228, 1.0], [1395, 1.0], [1493, 1.0], [1715, 1.0], [1809, 1.0], [1835, 1.0], [1942, 1.0], [2083, 1.0], [2134, 1.0], [2201, 1.0]]\n"
+      "[[30, 1.0], [354, 1.0], [3742, 1.0], [5076, 1.0], [5509, 1.0], [5792, 1.0], [6460, 1.0], [8168, 1.0], [8888, 1.0], [28, 0.9992887623566789], [4105, 0.99906269625629], [3291, 0.9989765732500937], [9240, 0.9989610386805192], [6899, 0.9989286273905196], [2223, 0.9987901086991989], [8379, 0.9986635070876165], [4026, 0.9986446797476377], [7973, 0.9984411525986358], [9794, 0.9983169319593336], [10045, 0.9981753832265317]]\n"
      ]
     }
    ],
@@ -562,7 +562,7 @@
     "                user2_rate.append(j[1])\n",
     "                #print(j[1])\n",
     "                overlaps += 1\n",
-    "    return 0 if overlaps <= 2 else 1 - spatial.distance.cosine(user1_rate, user2_rate) #cosine similarity\n",
+    "    return 0 if overlaps <= 4 else 1 - spatial.distance.cosine(user1_rate, user2_rate) #cosine similarity\n",
     "\n",
     "def get_most_similar_users(dictionary, userid):\n",
     "    scores = []\n",
@@ -579,7 +579,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 13,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -610,7 +610,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 14,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -622,23 +622,23 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 15,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "License to Wed\n",
       "Terminator 3: Rise of the Machines\n",
-      "The Million Dollar Hotel\n",
-      "Once Were Warriors\n",
-      "Boogie Nights\n",
-      "And Then There Were None\n",
+      "Shriek If You Know What I Did Last Friday the Thirteenth\n",
+      "License to Wed\n",
+      "Sleepless in Seattle\n",
       "The 39 Steps\n",
-      "The Garden of Eden\n",
-      "Say Anything...\n",
-      "K-19: The Widowmaker\n"
+      "The Million Dollar Hotel\n",
+      "Point Break\n",
+      "Once Were Warriors\n",
+      "The Talented Mr. Ripley\n",
+      "Men in Black II\n"
      ]
     }
    ],
